# tsman

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  demo.tape
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
src/: actions.rs  cli.rs  config.rs  main.rs  menu.rs  persistence.rs  terminal_utils.rs  tmux_interface.rs  tui.rs  util.rs
src/menu/: action.rs  action_dispacher.rs  action_dispatcher.rs  event_handler.rs  item.rs  item_state.rs  items_state.rs  menu_action.rs  renderer.rs  state.rs  ui_flags.rs
src/tmux/: interface.rs  layout.rs  layout_parser.rs  layout_renderer.rs  mod.rs  session.rs
tests/: layout_parser.rs  layout_renderer.rs
