[package]
name = "tsman"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tsman"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.39", features = ["derive"] }
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shell-escape = "0.1.5"
tempfile = "3.20.0"
