[package]
name = "tsman"
version = "0.5.6"
edition = "2024"
authors = ["Gabriel-Cristian Tecuceanu <tecuceanu.gabriel22@gmail.com>"]
license = "MIT"
description = "A feature-rich tmux session manager with fuzzy-finding"
repository = "https://github.com/TecuceanuGabriel/tsman"
keywords = ["tmux", "session-manager", "tui", "fuzzy-finding", "productivity"]
categories = ["command-line-utilities"]

[lib]
name = "tsman"
path = "src/lib.rs"

[[bin]]
name = "tsman"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.39", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.29.0"
dirs = "4.0"
fuzzy-matcher = "0.3.7"
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shell-escape = "0.1.5"
tempfile = "3.20.0"
tui-textarea = "0.7.0"
